bug fix: playertab z-index

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -188,6 +188,7 @@ body{
   left: 100%;
   margin-left: -50px;
   padding-left: 50px;
+  z-index:3;
   div{
     font-size: 20px;
     margin-left: 10px;
